<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ui.medicine.AddMedicineActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/padding_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:orientation="vertical">

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:text="@string/medicine_name"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average" />
                <!--app:srcCompat="@drawable/ic_famer_avatar" />-->

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords"
                    android:padding="@dimen/padding_average"
                    android:textColorHint="@color/grey_500" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.8"
                android:text="@string/medicine_description"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding_average"
                    android:textColorHint="@color/grey_500" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.8"
                android:text="@string/medicine_frequency"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding_average"
                    android:textColorHint="@color/grey_500" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/generalScreenHints"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/start_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@drawable/bg_edit_text_gray"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtQuantity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5.5"
                            android:background="@android:color/transparent"
                            android:inputType="number"
                            android:padding="12dp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/generalScreenHints"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/end_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@drawable/bg_edit_text_gray"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtPrice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5.5"
                            android:background="@android:color/transparent"
                            android:inputType="number"
                            android:padding="12dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/bg_blue_button"
                android:text="@string/proceed"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:typeface="normal" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
